--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "date-fns": "^2.29.2",
+    "emotion-reset": "^3.0.1",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
